--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@ body {
   margin: 0;
   font-family: "Hind Siliguri", sans-serif;
   background-color: $color-yellow;
+  overflow-x: hidden;
 }
 
 a {
@@ -23,6 +24,8 @@ button {
   border-radius: 5px;
   border-style: none;
   transition-duration: 300ms;
+  padding: 0.75rem;
+  font-size: 1.1rem;
   cursor: pointer;
   &:hover {
     background-color: $color-secondary;
@@ -96,4 +99,49 @@ header {
   float: right;
   font-size: 28px;
   font-weight: bold;
+}
+
+section {
+  background-color: $color-green;
+  & > h1 {
+    padding-left: 5rem;
+    padding-top: 2rem;
+  }
+}
+
+section.carousel > ul {
+  background-color: $color-green;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 2rem;
+  min-width: 96.4vw;
+  max-width: 100vw;
+  display: flex;
+  gap: 4rem;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  li {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    scroll-snap-align: center;
+    list-style-type: none;
+  }
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  height: 6px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3d4852;
+  border-radius: 3px;
 }
